sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/Subscribed_Solutions__c.object-meta.xml
<CustomObject>
    <description>Stores user subscription and notification preferences for OneHub solutions. Each record represents a user's preference settings for a specific solution they have subscribed to.</description>
    <label>Subscribed Solution</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Solutions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>