sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Email_Alerts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the user wants to receive email alerts for this subscription</description>
    <label>Email Alerts</label>
    <type>Checkbox</type>
</CustomField>