sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>JSON-formatted notification frequency settings (e.g., daily, weekly, immediate)</description>
    <label>Frequency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>