sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Timestamp of the last modification to this subscription preference</description>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>