sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Notification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master toggle for all notifications related to this subscription</description>
    <label>Notification Enabled</label>
    <type>Checkbox</type>
</CustomField>