sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Push_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user wants to receive push notifications for this subscription</description>
    <label>Push Notifications</label>
    <type>Checkbox</type>
</CustomField>