sfdx-dependencies/force-app/main/default/objects/Subscribed_Solutions__c/fields/Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Name__c</fullName>
    <description>The name of the OneHub solution the user has subscribed to</description>
    <label>Solution Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>